# DesignPattern

./: .gitignore
Observer/: CMakeLists.txt  CMakelists.txt  main.cpp  observer.cpp  observer.hpp  stock.cpp
Observer/src/: events.cpp  main.cpp  observer.cpp  observer.hpp  stock.cpp  trader.cpp
Singleton/: main.cpp  singleton.hpp  test.cpp
TemplateMethodPattern/: CMakeLists.txt  templatemethodpattern.cpp
TemplateMethodPattern/src/: main.cpp  templatemethodpattern.hpp
